# citypulse-ingestion

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: cities.py  health.py  latestweather.py  weather.py
app/clients/: weather_client.py
app/core/: config.py  logging.py
app/database/: session.py
app/etl/: city_import_pipeline.py  run_weather_ingestion.py  transformers.py  weather_pipeline.py
app/models/: __init__.py  city.py  weather.py
app/scheduler/: weather_scheduler.py
app/schemas/: city.py  weather.py
app/services/: city_service.py  weather_ingestion_service.py  weather_service.py
migrations/: env.py
migrations/versions/: 24d1889c7da8_create_weather_observations.py  3018e9c70dd9_create_cities_table.py
scripts/: import_cities.py  seed_cities.py
