[project]
name = "citypulse-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
